--- a/continuous-opt.tex
+++ b/continuous-opt.tex
@@ -1,4 +1,5 @@
 \chapter{Continuous Program Optimization Techniques}
+\label{ch:continuous}
 
 \section{Implementing On-Stack Replacement in LLVM}
 
