--- a/header.tex
+++ b/header.tex
@@ -19,6 +19,7 @@
 \newcommand{\mynote}[1]{\medskip\noindent{\small[{\bf Note:} {\em #1}]}}
 
 \ifdefined\noauthorea
+\newcommand{\mychapter}{}
 \newcommand{\mysection}{}
 \newcommand{\mydefinition}{}
 \newcommand{\myfigure}{}
@@ -27,6 +28,7 @@
 \newcommand{\mytheorem}{}
 \newcommand{\myequation}{}
 \else
+\newcommand{\mychapter}{Chapter~}
 \newcommand{\mysection}{Section~}
 \newcommand{\mydefinition}{Definition~}
 \newcommand{\myfigure}{Figure~}
