--- a/perf-profiling.tex
+++ b/perf-profiling.tex
@@ -1,5 +1,12 @@
 \chapter{Performance Profiling Techniques}
+\label{ch:profiling}
+
+%In this thesis, we devise two {\em dynamic} (i.e., run-time) analyses for collecting fine-grained profiling information based on efficient and elegant algorithmic techniques. The first analysis works at {\em intra-procedural} level and identifies cyclic paths that are taken in the control-flow graph of a single procedure, thus spanning multiple loop iterations. The second analysis is {\em inter-procedural} as it focuses on identifying the calling contexts of function invocations that are most frequently encountered during the execution of a real-world application, where a {\em calling context} is defined as the sequence of functions concurrently active on the stack when a function call is performed. Both techniques can provide valuable information for program understanding and performance analysis, as they can be used to direct optimizations to portions of the code where most resources are consumed.
 
 \section{Inter-Procedural Profiling}
 
+%The first contribution of this thesis is an {\em interprocedural} technique for identifying the most frequently encountered calling contexts\footnote{A {\em calling context} is defined as the sequence of functions that are concurrently active on the stack when a function call is performed.} across function invocations. We show that the traditional approach for constructing the {\em Calling Context Tree} (CCT) might  not be sustainable for real-world applications, as their CCTs often consist of tens of millions of nodes, making them difficult to analyze and also hurting execution time because of poor access locality. We thus introduce a novel data structure, the {\em Hot Calling Context Tree} (HCCT), in the spectrum of representations for interprocedural control flow. The HCCT is the subtree of the CCT containing only its most visited nodes, which we call {\em hot}, along with their ancestors, and can be constructed independently of the CCT using fast, space-efficient algorithms for mining frequent items in data stream. These algorithms allow us to distinguish between hot and cold context on-the-fly, and we show both theoretically and experimentally that for collected metrics the HCCT achieves a similar precision as the CCT in a space that is several orders of magnitude smaller. We show on prominent benchmarks that our implementation, shipping as a plugin for the \gcc\ compiler, incurs a slowdown competitive with the \gprof\ profiler while collecting much finer-grained profiles.
+
 \section{Intra-Procedural Profiling}
+
+%Identifying the most frequently executed portions of code to guide optimization is important also when done within the boundaries of a single procedure. The well-known Ball and Larus algorithm for {\em intraprocedural} path profiling can efficiently encode acyclic paths that are taken at run-time across the control-flow graph of a function. Previous attempts to extend it to capture multiple loop iterations, thus encoding cyclic paths, are based on rather complex algorithms that incur severe performance overheads even for short cyclic paths. In this thesis we present a new, data-structure based approach to multi-iteration path profiling built on top of the original Ball-Larus numbering technique. Starting from the observation that any cylic path in the control-flow graph can be described as a concatenation of Ball-Larus acyclic paths, we show how to accurately profile all executed paths obtained as a concatenation of up to $k$ Ball-Larus paths, where $k$ is a user-defined parameter. We provide examples showing that this method can reveal optimization opportunities that acyclic-path profiling would miss, and we present an extensive experimental investigation on a large variety of Java benchmarks in the Jikes RVM. Experiments show that our approach can be even faster than a hash table-based implementation of the Ball-Larus algorithm due to fewer operations on smaller tables, producing compact representations of cyclic paths even for large values of $k$.
