--- a/introduction.tex
+++ b/introduction.tex
@@ -28,20 +28,25 @@ In the past three decades many sophisticated software-based techniques have been
 
 Another key ingredient for adaptive optimization is the ability of a runtime to divert the execution to the newly generated optimized code {\em while} the original function is executing. In fact, in the presence of long-running methods it is not sustainable for a VM to wait for the original function to complete and let only subsequent invocations run the optimized version. The problem of handling transitions between different compiled versions is formally known as {\em On-Stack Replacement} (OSR). Modern VMs implement OSR techniques to dynamically replace code with (more) optimized code, and also to invalidate aggressive, speculative optimizations and continue in a safe code version when an assumption made during the compilation no longer holds.
 
-Supporting OSR in a runtime system raises a number of fundamental questions. What is the set of program points at which OSR can safely occur, and how is it affected by compiler optimizations? Can we guarantee the soundness of an OSR transition? What is the impact of OSR machinery on running code? In this thesis, we address these questions from both a methodological and a practical perspective.
+Supporting OSR in a runtime system raises a number of fundamental questions. What is the set of program points at which OSR can safely occur, and how is it affected by compiler optimizations? Can we guarantee the soundness of an OSR transition? What is the impact of OSR machinery on running code? 
+%In this thesis, we address these questions from both a methodological and a practical perspective.
 
 \section{Contributions of the Thesis}
 
-The first contribution of this thesis is an {\em interprocedural} technique for identifying the most frequently encountered calling contexts\footnote{A {\em calling context} is defined as the sequence of functions that are concurrently active on the stack when a function call is performed.} across function invocations. We show that the traditional approach for constructing the {\em Calling Context Tree} (CCT) might  not be sustainable for real-world applications, as their CCTs often consist of tens of millions of nodes, making them difficult to analyze and also hurting execution time because of poor access locality. We thus introduce a novel data structure, the {\em Hot Calling Context Tree} (HCCT), in the spectrum of representations for interprocedural control flow. The HCCT is the subtree of the CCT containing only its most visited nodes, which we call {\em hot}, along with their ancestors, and can be constructed independently of the CCT using fast, space-efficient algorithms for mining frequent items in data stream. These algorithms allow us to distinguish between hot and cold context on-the-fly, and we show both theoretically and experimentally that for collected metrics the HCCT achieves a similar precision as the CCT in a space that is several orders of magnitude smaller. We show on prominent benchmarks that our implementation, shipping as a plugin for the \gcc\ compiler, incurs a slowdown competitive with the \gprof\ profiler while collecting much finer-grained profiles.
+The contributions of this thesis aim at covering both methodological and practical aspects of the adaptive optimization cycle, ranging from performance profiling to continuous program optimization through online code generation. Methodological contributions of this thesis include:
 
-Identifying the most frequently executed portions of code to guide optimization is important also when done within the boundaries of a single procedure. The well-known Ball and Larus algorithm for {\em intraprocedural} path profiling can efficiently encode acyclic paths that are taken at run-time across the control-flow graph of a function. Previous attempts to extend it to capture multiple loop iterations, thus encoding cyclic paths, are based on rather complex algorithms that incur severe performance overheads even for short cyclic paths. In this thesis we present a new, data-structure based approach to multi-iteration path profiling built on top of the original Ball-Larus numbering technique. Starting from the observation that any cylic path in the control-flow graph can be described as a concatenation of Ball-Larus acyclic paths, we show how to accurately profile all executed paths obtained as a concatenation of up to $k$ Ball-Larus paths, where $k$ is a user-defined parameter. We provide examples showing that this method can reveal optimization opportunities that acyclic-path profiling would miss, and we present an extensive experimental investigation on a large variety of Java benchmarks in the Jikes RVM. Experiments show that our approach can be even faster than a hash table-based implementation of the Ball-Larus algorithm due to fewer operations on smaller tables, producing compact representations of cyclic paths even for large values of $k$.
+\begin{itemize}
+ \item an {\em interprocedural} analysis to identify the most frequently encountered calling context across function invocations, based on data streaming algorithms that enable a reduction of space usage by orders of magnitude without sacrificing accuracy or performance;
+ \item an {\em intraprocedural} analysis to identify cyclic paths taken across the control-flow graph of a function, overcoming the limitations of previous approaches and enabling the profiling of very long cyclic paths using efficient data structures;
+ \item a new abstraction for on-stack replacement based on compensation code, to enable OSR at places that previous approaches do not support as they expect a new function to resume from the very same state of the original function;
+ \item a first step towards a provably sound methodological framework for OSR, identifying sufficient conditions to determine the set of points where OSR can safely occur and devising an algorithm to automatically generate compensation code in the presence of certain classes of compiler optimizations.
+\end{itemize}
 
-%, leaving the interesting open question of finding simpler and more efficient alternative methods.
-%cyclic paths (i.e., spanning multiple loop iterations) 
-
-%In this thesis, we devise two {\em dynamic} (i.e., run-time) analyses for collecting fine-grained profiling information based on efficient and elegant algorithmic techniques. The first analysis works at {\em intra-procedural} level and identifies cyclic paths that are taken in the control-flow graph of a single procedure, thus spanning multiple loop iterations. The second analysis is {\em inter-procedural} as it focuses on identifying the calling contexts of function invocations that are most frequently encountered during the execution of a real-world application, where a {\em calling context} is defined as the sequence of functions concurrently active on the stack when a function call is performed. Both techniques can provide valuable information for program understanding and performance analysis, as they can be used to direct optimizations to portions of the code where most resources are consumed.
+\noindent We evaluate the practicability of all our techniques through extensive experimental studies on both industry-strength benchmark and real-world applications. All our techniques have been implemented as libraries for mainstream systems, including the \gcc\ compiler, the Jikes RVM, and the LLVM compiler infrastructure, and their source code is publicly available. To back our results and to empower other researchers to build upon the contributions of our papers, we submitted two software artifacts that have been reviewed and endorsed by the scientific community. We believe that some techniques presented in this paper might have some technology transfer potential in VM construction; private conversations we had with developers from major ICT players about our OSR library for LLVM have been quite encouraging in this sense.
 
 \section{Structure of the Thesis}
+
+The rest of this thesis is structured as follows. \mychapter\ref{ch:literature} reviews the state of the art in techniques for adaptive program optimization. \mychapter\ref{ch:profiling} presents our intra- and inter-procedural techniques for performance profiling, while \mychapter\ref {ch:continuous} tackles the on-stack replacement problem for enabling continuous program optimization. \mychapter\ref{ch:experiments} illustrates the results of our experimental studies. \mychapter\ref{ch:case-studies} presents examples of application of our techniques in program optimization. Conclusions and possible directions for future work are discussed in \mychapter\ref{ch:conclusions}.
 
 %This thesis tackles problems arising while analyzing the behavior of a running program, within and across the boundaries of a procedure, 
 %especially when the target form is directly executable on hardware. Interpreters on the other hand can 
