--- a/continuous-opt.tex
+++ b/continuous-opt.tex
@@ -3,4 +3,7 @@
 
 \section{Implementing On-Stack Replacement in LLVM}
 
-\section{On-Stack Replacement in the Presence of Compiler Optimizations}
+\section{Proving On-Stack Replacement Sound}
+
+%\section{On-Stack Replacement in the Presence of Compiler Optimizations}
+\section{On-Stack Replacement and Compiler Optimizations}
