--- a/perf-profiling.tex
+++ b/perf-profiling.tex
@@ -9,12 +9,36 @@ In this chapter, we present two run-time analyses for collecting fine-grained pr
 
 The first contribution we present in this thesis is an {\em interprocedural} technique for identifying the calling context that are most frequently encountered across function invocations at run-time. We show that the traditional approach for constructing a {\em Calling Context Tree} (CCT) might not be sustainable for real-world applications, as their CCTs often consist of tens of millions of nodes, making them difficult to analyze and also hurting execution time because of poor access locality. We thus introduce a novel data structure, the {\em Hot Calling Context Tree} (HCCT), in the spectrum of representations for interprocedural control flow. The HCCT is defined as the subtree of the CCT containing only its most visited nodes, which we call {\em hot}, along with their ancestors, and can be constructed independently of the CCT using fast, space-efficient algorithms for mining frequent items in data stream.
 
+\subsection{Motivation and Contributions}
+
 %These algorithms allow us to distinguish between hot and cold context on-the-fly, and we show both theoretically and experimentally that for collected metrics the HCCT achieves a similar precision as the CCT in a space that is several orders of magnitude smaller. We show on prominent benchmarks that our implementation, shipping as a plugin for the \gcc\ compiler, incurs a slowdown competitive with the \gprof\ profiler while collecting much finer-grained profiles.
 
 % \footnote{A {\em calling context} is defined as the sequence of functions that are concurrently active on the stack when a function call is performed.}
+
+\subsection{Approach}
+
+\subsection{Algorithms}
+
+\subsection{Implementation}
+
+\subsection{Comparison with Related Work}
+
+\subsection{Discussion}
 
 \section{Intraprocedural Profiling}
 
 Path profiling is a powerful {\em intraprocedural} methodology for identifying performance bottlenecks in a program. The well-known Ball and Larus algorithm for {\em intraprocedural} path profiling can efficiently encode {\em acyclic} paths that are taken across the control-flow graph of a function. Previous attempts to extend it to encode {\em cyclic} paths, and thus to span multiple loop iterations in order to capture more optimization opportunities, are based on rather complex algorithms that incur severe performance overheads even for short cyclic paths. In this thesis we present a new, data-structure based approach to {\em multi-iteration} path profiling built on top of the original Ball-Larus numbering technique. Starting from the observation that any cyclic path can be described as a concatenation of Ball-Larus acyclic paths, we show how to accurately profile all executed paths obtained as a concatenation of up to $k$ Ball-Larus paths, where $k$ is a user-defined parameter.
 
 %We provide examples showing that this method can reveal optimization opportunities that acyclic-path profiling would miss, and we present an extensive experimental investigation on a large variety of Java benchmarks in the Jikes RVM. Experiments show that our approach can be even faster than a hash table-based implementation of the Ball-Larus algorithm due to fewer operations on smaller tables, producing compact representations of cyclic paths even for large values of $k$.
+
+\subsection{Motivation and Contributions}
+
+\subsection{Approach}
+
+\subsection{Algorithms}
+
+\subsection{Implementation}
+
+\subsection{Comparison with Related Work}
+
+\subsection{Discussion}
