--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,5 @@
 \documentclass[PhD,binding=0cm,noexaminfo,oneside]{sapthesis}
+\captionsetup{format=plain,indention=0cm,singlelinecheck=false, width=.95\textwidth}
 \usepackage{microtype} % http://www.khirevich.com/latex/microtype/
 \usepackage[utf8]{inputenx}
 \usepackage{hyperref}
