--- a/hcct.tex
+++ b/hcct.tex
@@ -67,6 +67,10 @@ In a performance profiling scenario, only the most frequent contexts are of inte
 ciao
 \fi
 
+\ifx\noauthorea\undefined
+whd
+\fi
+
 %~\cite{}
 
 %Context-sensitive profiling provides 
