--- a/thesis.tex
+++ b/thesis.tex
@@ -10,7 +10,7 @@
   urlcolor = blue, %  colour for external hyperlinks
   linkcolor = black, % colour of internal links
   citecolor = black, % colour of citations
-  pdftitle = {New Techniques for Adaptive Optimization},
+  pdftitle = {New Techniques for Adaptive Program Optimization},
   pdfauthor= {Daniele Cono D'Elia}
 }	
 
