--- a/hcct.tex
+++ b/hcct.tex
@@ -53,6 +53,7 @@ sjeng & 57 & 221 & OOM & 28\,370\,207\,811 \\
 \end{center}
 \end{table}
 \vspace{-8mm}
+
 \ifauthorea{\newline}{}
 
 \mynote{Add reference to related work section for the CCT}
@@ -63,9 +64,16 @@ However, even CCTs may be very large and difficult to analyze in several applica
 
 In a performance profiling scenario, only the most frequent contexts are of interest, as they represent the hot spots to which optimizations must be directed. As observed in~\cite{Zhuang06}: ``Accurately collecting information about hot edges may be more useful than accurately constructing an entire CCT that includes rarely called paths.'' \myfigure\ref{fig:hcct-skewness} shows that, for different applications, only a small fraction of contexts are hot: in conformance with the Pareto principle, nearly 90\% of routine calls take place in only 10\% of contexts. The skewness of function-call distribution suggests that space could be greatly reduced by keeping information about hot contexts only and discarding on the fly contexts that are likely to be cold, i.e., to have low frequency.
 
+\ifdefined\noauthorea
+\begin{figure}[hb]
+\begin{center}
+\includegraphics[width=0.95\columnwidth]{figures/hcct-skewness/hcct-skewness.eps}
+\caption{\protect\input{figures/hcct-skewness/caption}}
+\end{center}
+\end{figure}
+\fi
 
-
-
+Lorem ipsum...
 %~\cite{}
 
 %Context-sensitive profiling provides 
