--- a/hcct.tex
+++ b/hcct.tex
@@ -1,12 +1,9 @@
 \section{Interprocedural Profiling}
 
 \ifdefined\noauthorea
-\begin{figure}[hb]
-\begin{center}
-\includegraphics[width=0.95\columnwidth]{figures/hcct-skewness/hcct-skewness.eps}
-\caption{\protect\input{figures/hcct-skewness/caption}}
-\end{center}
-\end{figure}
+whd
+\else
+bah
 \fi
 
 Lorem ipsum...
