--- a/hcct.tex
+++ b/hcct.tex
@@ -1,6 +1,6 @@
 \section{Interprocedural Profiling}
 
-\ifdefined\noauthorea whd \else bah \fi
+\ifdefined\ktm whd \else bah \fi
 
 Lorem ipsum...
 %~\cite{}
