--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,2 +1,17 @@
 \chapter{Conclusions and Future Work}
 \label{ch:conclusions}
+
+\begin{table}[ht]
+%\centering
+\begin{center}
+\begin{tabular}{|l|r r r r|}
+\hline
+Application & $|$Call graph$|$ & Call sites & $|$CCT$|$ & $|$Call tree$|$\\
+\hline
+amarok & 13\,754 & 113\,362 & 13\,794\,470 & 991\,112\,563 \\
+sjeng & 57 & 221 & OOM & 28\,370\,207\,811 \\
+\hline
+\end{tabular}
+\caption{woooooo}
+\end{center}
+\end{table}
