--- a/conclusions.tex
+++ b/conclusions.tex
@@ -12,7 +12,7 @@ amarok & 13\,754 & 113\,362 & 13\,794\,470 & 991\,112\,563 \\
 sjeng & 57 & 221 & OOM & 28\,370\,207\,811 \\
 \hline
 \end{tabular}
-\captionsetup{format=plain,indention=0cm,singlelinecheck=false, width=.95\textwidth}
+\captionsetup{format=plain}
 \caption{woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo}
 \end{center}
 \end{table}
