--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,7 +1,8 @@
 \chapter{Conclusions and Future Work}
 \label{ch:conclusions}
 
-\begin{table}[ht]
+\begin{table}[t]
+\begin{small}
 %\centering
 \begin{center}
 \begin{tabular}{|l|r r r r|}
@@ -9,10 +10,11 @@
 Application & $|$Call graph$|$ & Call sites & $|$CCT$|$ & $|$Call tree$|$\\
 \hline
 amarok & 13\,754 & 113\,362 & 13\,794\,470 & 991\,112\,563 \\
-sjeng & 57 & 221 & OOM & 28\,370\,207\,811 \\
+sjeng & 57 & 221 & OOM & 28\,370\,207\,811
 \hline
 \end{tabular}
-\captionsetup{format=plain}
 \caption{woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo woooooo}
 \end{center}
+\end{small}
 \end{table}
+\ifauthorea{\newline}{}
