--- a/hcct.tex
+++ b/hcct.tex
@@ -11,7 +11,7 @@ Calling-context information can also be employed in unit test generation~\cite{V
 
 \begin{table}[ht]
 \begin{small}
-\centering
+\ifauthorea{}{\centering}
 \begin{tabular}{|l|r r r r|}
 \hline
 Application & $|$Call graph$|$ & Call sites & $|$CCT$|$ & $|$Call tree$|$\\
